# agentic-ad-exchange

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
agents/: base.py  pyproject.toml  run_demo.py
dashboard/: .env.production  package-lock.json  package.json
docs/: aax-technical-abstract.md  class-presentation-brief.md  onboarding-delegation-design.md  product-architecture.md  redesign-v2.md  redesign-v3-gemini.md  slide-infographic.html  ux-design.md  vision.md
personas/: agt_campus_pizza.md  agt_gatorade_sports.md  agt_nike_basketball.md  (+1 more)
server/: .env.example  pyproject.toml
server/data/: athletes_seed.json
server/protocol/: demand.md  protocol.md  supply.md
server/src/: config.py  main.py  persistence.py  store.py
server/src/api/: agents.py  athletes.py  brands.py  content.py  deals.py  deps.py  opportunities.py  orgs.py  proposals.py  stream.py
server/src/conflict/: __init__.py  checker.py  graph.py  models.py
server/src/engine/: __init__.py  deal_making.py  events.py  fulfillment.py  managed.py  orchestrator.py  state.py  timeout.py  webhook.py
server/src/gemini/: __init__.py  adaptor.py  content_generator.py  scene_analyzer.py
server/src/matching/: __init__.py  scorer.py
server/src/personas/: __init__.py  loader.py
server/src/schemas/: __init__.py  agents.py  common.py  conflicts.py  deals.py  delegations.py  matching.py  opportunities.py  orgs.py  personas.py  proposals.py
server/src/validation/: __init__.py  content.py
server/tests/: test_agents_v2.py  test_conflict.py  test_engine.py  test_matching.py  test_orgs.py
(+39 files in other folders)
